tests/paczka1/fuzzy1/71136439.err
Error in line 3: mEW9fd9Os6 A68 65,0
Error in line 6: jjiPkTq2khZ A919 30,3
Error in line 14: pLzjhMr8aT4 A68 68,1
Error in line 26: Gzr S938 67,3
Error in line 28: jjiPkTq2khZ A68 72,9
Error in line 31: RdfpYrMXq A919 36,2
Error in line 34: RdfpYrMXq S938 16,5
